excerpt bug workaround

--- a/_config.yml
+++ b/_config.yml
@@ -15,5 +15,7 @@ markdown: kramdown
 permalink: /:year/:title
 timezone: UTC
 
+excerpt_separator: ""   # Workaround for http://blog.slaks.net/2013-08-09/jekyll-tag-was-never-closed
+
 gems:
   - jekyll-redirect-from
