--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Chris Martin
-description: "Fold, Scala, Haskell, complaining"
+description: "Fluent, Scala, Haskell, complaining"
 baseurl: ""
 url: "http://chris-martin.org"
 email: ch.martin@gmail.com
