--- a/hs/chris-martin-org.cabal
+++ b/hs/chris-martin-org.cabal
@@ -7,6 +7,7 @@ cabal-version:         >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     ChrisMartinOrg
+                     , ChrisMartinOrg.Content
                      , ChrisMartinOrg.Core
                      , ChrisMartinOrg.Core.Chron
                      , ChrisMartinOrg.Css
