--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,7 @@
 resolver: lts-9.3
 
 packages:
-  - chris-martin-org
+  - bricks
 
 extra-deps:
   - optparse-applicative-0.14.0.0
-
-nix:
-  packages:
-    - zlib
