--- a/bricks/package.yaml
+++ b/bricks/package.yaml
@@ -13,6 +13,7 @@ library:
     - Bricks
 
     - Bricks.Expression
+    - Bricks.Expression.Construction
     - Bricks.IndentedString
     - Bricks.Keyword
     - Bricks.Parsing
