--- a/bricks/package.yaml
+++ b/bricks/package.yaml
@@ -38,12 +38,14 @@ library:
     - Bricks.Internal.Prelude
     - Bricks.Internal.Seq
     - Bricks.Internal.Text
+    - Bricks.Internal.Transformers
 
 dependencies:
   - base       >= 4.9   && < 4.10
   - containers >= 0.5.7 && < 0.6
   - parsec     >= 3.1.6 && < 3.2
   - text       >= 1.2.2 && < 1.3
+  - transformers
 
 tests:
 
