--- a/bricks/package.yaml
+++ b/bricks/package.yaml
@@ -35,6 +35,7 @@ library:
     - Bricks.Rendering
     - Bricks.UnquotedString
 
+    - Bricks.Internal.Magma
     - Bricks.Internal.Prelude
     - Bricks.Internal.Seq
     - Bricks.Internal.Text
