--- a/bricks/package.yaml
+++ b/bricks/package.yaml
@@ -27,23 +27,28 @@ library:
 
     - Bricks
 
+    - Bricks.BuiltinFunctions
+    - Bricks.Evaluation
     - Bricks.Expression
     - Bricks.Expression.Construction
-    - Bricks.Evaluation
+    - Bricks.ExpressionToTerm
     - Bricks.IndentedString
     - Bricks.Keyword
     - Bricks.Parsing
     - Bricks.Rendering
+    - Bricks.Term
+    - Bricks.Type
     - Bricks.UnquotedString
 
+    - Bricks.Internal.Monad
     - Bricks.Internal.Prelude
     - Bricks.Internal.Seq
     - Bricks.Internal.Text
-    - Bricks.Internal.Transformers
 
 dependencies:
   - base       >= 4.9   && < 4.10
   - containers >= 0.5.7 && < 0.6
+  - mtl
   - parsec     >= 3.1.6 && < 3.2
   - text       >= 1.2.2 && < 1.3
   - transformers
