--- a/bricks/package.yaml
+++ b/bricks/package.yaml
@@ -8,7 +8,7 @@ synopsis: |
 description: |
   Bricks is a lazy functional language based on Nix.
   This package provides parsing, rendering, and
-  evaluation (forthcoming) for the Bricks language.
+  evaluation for the Bricks language.
 
 category: Language
 
