a bunch of documentation, mostly about differences from Nix

--- a/bricks/package.yaml
+++ b/bricks/package.yaml
@@ -35,6 +35,7 @@ library:
     - Bricks.IndentedString
     - Bricks.Keyword
     - Bricks.Parsing
+    - Bricks.Prelude
     - Bricks.Rendering
     - Bricks.StringExpressions
     - Bricks.Term
