some initial thoughts about source information

--- a/bricks/package.yaml
+++ b/bricks/package.yaml
@@ -37,6 +37,7 @@ library:
     - Bricks.Parsing
     - Bricks.Prelude
     - Bricks.Rendering
+    - Bricks.Source
     - Bricks.StringExpressions
     - Bricks.Term
     - Bricks.Type
