--- a/bricks-syntax/package.yaml
+++ b/bricks-syntax/package.yaml
@@ -47,3 +47,15 @@ tests:
     dependencies:
       - base    >= 4.9  && < 4.10
       - doctest >= 0.11 && < 0.14
+
+  show:
+    source-dirs: test
+    main: show.hs
+    dependencies:
+      - bricks-syntax
+      - base    >= 4.9  && < 4.10
+      - exceptions
+      - hint
+
+data-files:
+  - test/show-examples.txt
