--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - nix-env -i stack
 
 script:
-  - stack --nix --no-terminal test
+  - stack --nix --no-nix-pure --no-terminal test
 
 notifications:
   email: false
