--- a/bricks-syntax/package.yaml
+++ b/bricks-syntax/package.yaml
@@ -37,6 +37,9 @@ dependencies:
   - either-list-functions == 0.0.0.1
   - text       >= 1.2.2 && < 1.3
 
+data-files:
+  - ../test-data/expression-show-examples.txt
+
 tests:
 
   doctest:
@@ -56,6 +59,3 @@ tests:
       - base    >= 4.9  && < 4.10
       - exceptions
       - hint
-
-data-files:
-  - test/show-examples.txt
