--- a/bricks/package.yaml
+++ b/bricks/package.yaml
@@ -47,6 +47,8 @@ dependencies:
   - containers >= 0.5.7 && < 0.6
   - mtl
   - parsec     >= 3.1.6 && < 3.2
+  - path
+  - path-text-utf8
   - text       >= 1.2.2 && < 1.3
   - transformers
 
