--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-9.6
+resolver: nightly-2017-10-25
 
 packages:
   - bricks
@@ -9,4 +9,5 @@ packages:
   - bricks-syntax
 
 extra-deps:
-  - either-list-functions-0.0.0.1
+  - loc-0.1.3.1
+  - path-text-utf8-0.0.0.2
