fix test-data thing with a symlink

--- a/bricks-syntax/package.yaml
+++ b/bricks-syntax/package.yaml
@@ -38,7 +38,7 @@ dependencies:
   - text       >= 1.2.2 && < 1.3
 
 data-files:
-  - ../test-data/expression-show-examples.txt
+  - test-data/expression-show-examples.txt
 
 tests:
 
